[package]
name = "sim1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.0"
rayon = "1.5.1"
juice = { version = "0.3.0", default-features = false }

[features]
default = ["native"]
native = ["juice/native"]
opencl = ["juice/opencl"]